--- a/core/html/design.css
+++ b/core/html/design.css
@@ -656,7 +656,7 @@ span.racer_points:after {
 }
 .top_content_wrapper.detail .middle_info.racer_ranking_points {
   height: 24.5px;
-  color: #999999;
+  color: #b3b3b3;
 }
 #tasklist .middle_info {
   padding-left: 0;
