--- a/core/html/design.less
+++ b/core/html/design.less
@@ -8,8 +8,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video, input {
 	margin: 0;
@@ -20,7 +20,7 @@ time, mark, audio, video, input {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
@@ -116,7 +116,7 @@ h1 {
     text-align: center;
     padding: 0px 15px;
     background-color: @c9;
-    text-transform: uppercase;   
+    text-transform: uppercase;
     font-style: @font;
     font-size: 18px;
     overflow: hidden;
@@ -162,7 +162,7 @@ li {
     border:none;
     margin: 7px 0 0 0;
 }
-    
+
 .top_content_wrapper{
     height: @line-height-top-content;
     text-align: center;
@@ -193,14 +193,14 @@ padding: 5px 0;
 
 .confirm {
     .left_info{
-        height: @line-height-detail-inner; 
-        width: @line-height-detail-inner; 
+        height: @line-height-detail-inner;
+        width: @line-height-detail-inner;
         &.parcel_name{
             border-radius: 5px;
         }
         .manifest_number{
-                    height: @line-height-detail-inner; 
-                    width: @line-height-detail-inner; 
+                    height: @line-height-detail-inner;
+                    width: @line-height-detail-inner;
                     padding-top: 20px !important;
                     color: @c1;
                     font-size: 1em;
@@ -209,7 +209,7 @@ padding: 5px 0;
                     display: block;
                     text-align: center;
                     padding-top: 12px;
-        }        
+        }
     }
     .middle_info{
         margin-left: @line-height-detail-inner;
@@ -229,12 +229,12 @@ padding: 5px 0;
     position: absolute;
     overflow: hidden;
     border-radius: 50px;
-}  
+}
 .left_info > img {
     width: 100%;
     margin-top: -6px;
-    }   
-    
+    }
+
 
 .middle_info {
     height: @line-height;
@@ -364,7 +364,7 @@ input[type="submit"]{
       box-shadow: 0 0 1px 1px @c3;
    }
 }
-    
+
 input[name="login"]{
    margin: 15px 0;
    width: 100%;
@@ -394,15 +394,15 @@ margin: 0;
 position: relative;
 top: 10px;
 padding-left: 5px;
-} 
+}
 
 // Photo Upload
 .photo_upload {
-z-index:1; 
-width: 99px; 
-height: 99px; 
-pointer-events: none; 
-position:absolute; 
+z-index:1;
+width: 99px;
+height: 99px;
+pointer-events: none;
+position:absolute;
 top:0;
 overflow: hidden;
 border: 1px dashed @c5;
@@ -444,7 +444,7 @@ th{
     background-color: @main_bgcolor;
     vertical-align: middle;
     color: @c6;
-    font-family: 'icomoon'; 
+    font-family: 'icomoon';
     font-size: 1em;
     vertical-align: middle;
 &.task_manifest{
@@ -477,7 +477,7 @@ background-color: @c_neg;
     font-family: 'icomoon';
 }
 &.manifest_points{
-   background-image: url(../../icons/coins16.png); 
+   background-image: url(../../icons/coins16.png);
    background-size: 30px;
 }
 &.manifest_description {
@@ -495,7 +495,7 @@ background-color: @c_neg;
 }
 }
 
-td{   
+td{
 &.drilldown:after{
     content: "\e60f";
     font-family: 'icomoon';
@@ -503,11 +503,11 @@ td{
     vertical-align: middle;
     font-size: 1.8em;
 }
-    
+
 &.manifest_edit {
    background-image: url(../../icons/pencil44.png);
    background-size: 20px;
- 
+
 }
 &.manifest_configure {
    background-image: url(../../icons/settings39.png);
@@ -530,7 +530,7 @@ tr.no_action {
 
 div.indicator_pos{
     .indicator;
-    background-color: @c_pos;   
+    background-color: @c_pos;
     height: 49px;
 }
 
@@ -549,8 +549,8 @@ div.indicator_current{
 }
 
 .menu_list{
-    font-size: 1.7em; 
-    color: @c5; 
+    font-size: 1.7em;
+    color: @c5;
     text-align: left;
     line-height: @line-height;
     &:after{
@@ -582,7 +582,7 @@ div.indicator_current{
     &.parcel:before{
         .navigation_icon;
         content: "\e602";
-        color: #ECC816; 
+        color: #ECC816;
         }
     &.checkpoint:before{
         .navigation_icon;
@@ -627,7 +627,7 @@ span.racer_points {
     color: @c4;
     text-align: right;
     float: left;
-    width: 60px;   
+    width: 60px;
     &:after{
     content: "\e601";
     font-family: 'icomoon';
@@ -641,7 +641,7 @@ span.racer_points {
 .top_content_wrapper.detail{
     height: @line-height-detail;
 .top_info_wrapper, .right_info{
-    height: @line-height-detail-inner; 
+    height: @line-height-detail-inner;
     right: 0;
     .rider_number{
         font-size: 4em;
@@ -652,8 +652,8 @@ img{
     margin-top: -6px;
     }
 .left_info{
-height: @line-height-detail-inner; 
-width: @line-height-detail-inner; 
+height: @line-height-detail-inner;
+width: @line-height-detail-inner;
 .manifest_number{
 font-size: 1em;
 width: @line-height-detail-inner;
@@ -663,12 +663,12 @@ padding-top: 20px;
 }
 }
 .middle_info{
-height: @line-height; 
+height: @line-height;
 margin-left: @line-height-detail-inner;
 }
 .middle_info.racer_ranking_points{
     height: @line-height/2;
-    color: @c4;  
+    color: @c4;
 }
 }
 
@@ -684,7 +684,7 @@ margin-left: @line-height-detail-inner;
             background-repeat: no-repeat;
             background-size: 20px;
             background-position: 70px;
-            
+
         }
     }
 }
@@ -709,7 +709,7 @@ margin-left: @line-height-detail-inner;
 .right_info {
     float: left;
 }
-}  
+}
 }
 }
 #parceledit_parcel{
@@ -721,7 +721,7 @@ margin-left: @line-height-detail-inner;
 }
 }
 
-        
+
 // Racer Task List on Checkpoints
 
 #racertask_racertask{
@@ -839,7 +839,7 @@ div.parcel_image{
         }
     }
     .right_info{
-        text-align: right; 
+        text-align: right;
         width: 90px;
 .manifest_points:after{
     .manifest_counts;
@@ -864,8 +864,8 @@ div.parcel_image{
     .left_info{
         border-radius: 5px;
     }
-}    
-    
+}
+
 
 //  Task Detail
 
@@ -1004,7 +1004,7 @@ a.ohne {color: @c8; text-decoration: none;}
 .menu.menu_unfold {top:0px !important;}
 
 .header {position:fixed; width: 100%; top:0px; z-index: 100;
-height:@line-height; background: @c9; 
+height:@line-height; background: @c9;
 border-bottom: @border; text-align:center;}
 
 div.title {padding: 5px 25px;}
@@ -1015,7 +1015,8 @@ div.but_menu {.menubuttons; float:right; font-size: 16px; line-height: 16px;}
 @colw: 100%;
 .content {position:absolute; min-width: 260px; width: @colw; height: 100%;
     border-left: @border; border-right: @border; overflow-y: auto;
-    transition: width 200ms ease, left 200ms ease;} 
+    transition: width 200ms ease, left 200ms ease;
+		-webkit-overflow-scrolling: touch;}
 
 div.content0 {.content; left: 0%;}
 div.content1 {.content; left: 25%;}
@@ -1037,7 +1038,7 @@ div.content_menu_spacer {height: 55px;}
 .search { height:@line-height; border-bottom: @border; text-align:center;}
 
 .list {}
-.listitem {background: linear-gradient(@c1, @c1 - @degrade/2); 
+.listitem {background: linear-gradient(@c1, @c1 - @degrade/2);
 border-bottom: @border; text-align:center;}
 .li_head {margin: 5px; font-size: 2em; float:left; color: @c5}
 .li_content {margin: 5px; float:left; text-align: left;}
@@ -1050,4 +1051,3 @@ li:hover {background: @c1;}
 .racerpic {height: 120px; width: 120px; margin: 15px; float: left; overflow: hidden; border-radius: 60px;}
 .racerpic img {height: 120px; margin-left: -10px;}
 .racer_number {.li_head;}
-
