moved icons folder and new index.php

--- a/core/html/design.less
+++ b/core/html/design.less
@@ -48,11 +48,11 @@ table {
 // Icon Fonts
 @font-face {
 	font-family: 'icomoon';
-	src:url('../../icons/icomoon/fonts/icomoon.eot?77g9ef');
-	src:url('../../icons/icomoon/fonts/icomoon.eot?#iefix77g9ef') format('embedded-opentype'),
-		url('../../icons/icomoon/fonts/icomoon.woff?77g9ef') format('woff'),
-		url('../../icons/icomoon/fonts/icomoon.ttf?77g9ef') format('truetype'),
-		url('../../icons/icomoon/fonts/icomoon.svg?77g9ef#icomoon') format('svg');
+	src:url('../icons/fonts/icomoon.eot?77g9ef');
+	src:url('../icons/fonts/icomoon.eot?#iefix77g9ef') format('embedded-opentype'),
+		url('../icons/fonts/icomoon.woff?77g9ef') format('woff'),
+		url('../icons/fonts/icomoon.ttf?77g9ef') format('truetype'),
+		url('../icons/fonts/icomoon.svg?77g9ef#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -494,7 +494,7 @@ th{
     font-size: 1em;
     vertical-align: middle;
 &.task_manifest{
-background-image: url(../../icons/document127.png);
+background-image: url(../icons/document127.png);
 background-size: 24px;
 }
 &.checkpoint_name_first:before{
@@ -523,11 +523,11 @@ background-color: @c_neg;
     font-family: 'icomoon';
 }
 &.manifest_points{
-   background-image: url(../../icons/coins16.png);
+   background-image: url(../icons/coins16.png);
    background-size: 30px;
 }
 &.manifest_description {
-   background-image: url(../../icons/information33.png);
+   background-image: url(../icons/information33.png);
    background-size: 20px;
 }
 &.manifest_edit {
@@ -551,17 +551,17 @@ td{
 }
 
 &.manifest_edit {
-   background-image: url(../../icons/pencil44.png);
+   background-image: url(../icons/pencil44.png);
    background-size: 20px;
 
 }
 &.manifest_configure {
-   background-image: url(../../icons/settings39.png);
+   background-image: url(../icons/settings39.png);
    background-size: 20px;
 
 }
 &.manifest_delete {
-   background-image: url(../../icons/delete30.png);
+   background-image: url(../icons/delete30.png);
    background-size: 32px;
 }
 }
@@ -726,7 +726,7 @@ margin-left: @line-height-detail-inner;
     .middle_info{
         padding-left: 0;
         .title{
-            background-image: url(../../icons/pencil44.png);
+            background-image: url(../icons/pencil44.png);
             background-repeat: no-repeat;
             background-size: 20px;
             background-position: 70px;
