--- a/core/html/design.css
+++ b/core/html/design.css
@@ -128,8 +128,8 @@ table {
 /* End of CSS Reset*/
 @font-face {
   font-family: 'icomoon';
-  src: url('../../icons/icomoon/fonts/icomoon.eot?77g9ef');
-  src: url('../../icons/icomoon/fonts/icomoon.eot?#iefix77g9ef') format('embedded-opentype'), url('../../icons/icomoon/fonts/icomoon.woff?77g9ef') format('woff'), url('../../icons/icomoon/fonts/icomoon.ttf?77g9ef') format('truetype'), url('../../icons/icomoon/fonts/icomoon.svg?77g9ef#icomoon') format('svg');
+  src: url('../icons/fonts/icomoon.eot?77g9ef');
+  src: url('../icons/fonts/icomoon.eot?#iefix77g9ef') format('embedded-opentype'), url('../icons/fonts/icomoon.woff?77g9ef') format('woff'), url('../icons/fonts/icomoon.ttf?77g9ef') format('truetype'), url('../icons/fonts/icomoon.svg?77g9ef#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -485,7 +485,7 @@ th {
   vertical-align: middle;
 }
 th.task_manifest {
-  background-image: url(../../icons/document127.png);
+  background-image: url(../icons/document127.png);
   background-size: 24px;
 }
 th.checkpoint_name_first:before {
@@ -511,11 +511,11 @@ th.task_number:before {
   font-family: 'icomoon';
 }
 th.manifest_points {
-  background-image: url(../../icons/coins16.png);
+  background-image: url(../icons/coins16.png);
   background-size: 30px;
 }
 th.manifest_description {
-  background-image: url(../../icons/information33.png);
+  background-image: url(../icons/information33.png);
   background-size: 20px;
 }
 th.manifest_edit {
@@ -535,15 +535,15 @@ td.drilldown:after {
   font-size: 1.8em;
 }
 td.manifest_edit {
-  background-image: url(../../icons/pencil44.png);
+  background-image: url(../icons/pencil44.png);
   background-size: 20px;
 }
 td.manifest_configure {
-  background-image: url(../../icons/settings39.png);
+  background-image: url(../icons/settings39.png);
   background-size: 20px;
 }
 td.manifest_delete {
-  background-image: url(../../icons/delete30.png);
+  background-image: url(../icons/delete30.png);
   background-size: 32px;
 }
 .indicator {
@@ -710,7 +710,7 @@ span.racer_points:after {
   padding-left: 0;
 }
 #tasklist .middle_info .title {
-  background-image: url(../../icons/pencil44.png);
+  background-image: url(../icons/pencil44.png);
   background-repeat: no-repeat;
   background-size: 20px;
   background-position: 70px;
